# scout

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements-dev.txt  samconfig.toml  template.yaml
.github/workflows/: ci.yml  deploy.yml
docs/: README.md  sample-brief.md
frontend/: index.html
layer/: requirements.txt
mcp/: index.js  package.json
src/agents/: __init__.py  critic.py  planner.py  synthesizer.py  worker.py
src/api/: __init__.py  app.py  handler.py
src/core/: __init__.py  bedrock.py  budget.py  config.py  deps.py  models.py  offline.py  pipeline.py  prompts.py  repo.py
src/statemachine/: pipeline.asl.json
tests/: conftest.py  test_api.py  test_bedrock.py  test_budget.py  test_offline.py  test_pipeline.py  test_repo.py
